Update test index

--- a/index.html
+++ b/index.html
@@ -113,6 +113,11 @@ body{
       💡 Electricity Bill
     </button>
 
+    <button onclick="load('z7-Electricity-Bill.html','Confirm ou ban details bien avan fr 1 payment.')">
+      💡 Electricity Bill
+    </button>
+    
+
     <button onclick="load('z8-suspicious-link.html','Zamai pas click lor 1 link ki parait bizar.')">
       🚨 Suspicious Links
     </button>
@@ -148,3 +153,4 @@ function showStep(text){
 
 </body>
 </html>
+
