Update in naming

--- a/index.html
+++ b/index.html
@@ -85,32 +85,28 @@ body{
   <div class="menu">
     <h2>📱 Training Menu</h2>
 
-    <button onclick="load('z1-2fa.html','Sekirite additional pou protez ou conte.')">
+    <button onclick="load('z1-2FA.html','Sekirite additional pou protez ou conte.')">
       🔐 2FA Activation
     </button>
 
-    <button onclick="load('z2-pin.html','Grand Dimun zamais ou partaz ou pin.')">
+    <button onclick="load('z2-PIN.html','Grand Dimun zamais ou partaz ou pin.')">
       🔢 PIN Security
     </button>
 
-    <button onclick="load('z3-scanqr.html','Touletemp verifie bien avan ou scan 1 QR Code.')">
+    <button onclick="load('z3-ScanQR.html','Touletemp verifie bien avan ou scan 1 QR Code.')">
       📷 QR Scan Safety
     </button>
 
-    <button onclick="load('z4-paybill-balance.html','Touletemp verifie montant bien avant faire payment.')">
+    <button onclick="load('z4-Paybill-Balance.html','Touletemp verifie montant bien avant faire payment.')">
       💳 Pay Bills & Balance
     </button>
 
-    <button onclick="load('z5-otp.html','Ou OTP li zis pou ou,zamai partaz li.')">
+    <button onclick="load('z5-OTP.html','Ou OTP li zis pou ou,zamai partaz li.')">
       📩 OTP Safety
     </button>
 
-    <button onclick="load('z6-internet-safety.html','Servi internet sekirize ek pas connecte ar wifi piblik.')">
+    <button onclick="load('z6-Internet-Safety.html','Servi internet sekirize ek pas connecte ar wifi piblik.')">
       🌐 Internet Safety
-    </button>
-
-    <button onclick="load('z7-electricity-bill.html','Confirm ou ban details bien avan fr 1 payment.')">
-      💡 Electricity Bill
     </button>
 
     <button onclick="load('z7-Electricity-Bill.html','Confirm ou ban details bien avan fr 1 payment.')">
@@ -153,4 +149,5 @@ function showStep(text){
 
 </body>
 </html>
+
 
