--- a/z1-2FA.html
+++ b/z1-2FA.html
@@ -62,7 +62,7 @@
   <!-- Screen 1 -->
   <div class="screen active" id="s1">
     <h2>Senaryo 1: Aktiv 2FA</h2>
-    <p>Ouver ou application lor ou portab (MCB Juice ousa MyT Money)</p>
+    <p>Ouver ou application lor ou portab (MCB Juice ouswa MyT Money)</p>
     <button onclick="go('s2')">Coumanser</button>
   </div>
 
@@ -137,3 +137,4 @@
 
 </body>
 </html>
+
