--- a/z4-Paybill-Balance.html
+++ b/z4-Paybill-Balance.html
@@ -80,9 +80,9 @@
       <h3>Swazir Biller</h3>
       <select id="mcbBillerSelect">
         <option value="">--Swazir--</option>
-        <option value="ceg">CEG Bill</option>
-        <option value="cwa">CWA Water Bill</option>
-        <option value="emtel">EMTEL Bill</option>
+        <option value="ceg">CEG Electricite Bill</option>
+        <option value="cwa">CAW Water Bill</option>
+        <option value="emtel">Telephone Bill</option>
       </select>
     </div>
     <button onclick="payMCBBill()">Kontinie</button>
@@ -95,9 +95,9 @@
       <h3>Swazir Biller</h3>
       <select id="mytBillerSelect">
         <option value="">--Swazir--</option>
-        <option value="ceg">CEG Bill</option>
-        <option value="cwa">CWA Water Bill</option>
-        <option value="emtel">EMTEL Bill</option>
+        <option value="ceg">CEG Electricite Bill</option>
+        <option value="cwa">CAW Water Bill</option>
+        <option value="emtel">Telephone Bill</option>
       </select>
     </div>
     <button onclick="payMyTBill()">Kontinie</button>
@@ -194,3 +194,4 @@
 
 </body>
 </html>
+
