--- a/z6-Internet-Safety.html
+++ b/z6-Internet-Safety.html
@@ -82,7 +82,7 @@
     <p>❌ OTP kapav vole</p>
     <p>❌ Kont kapav hack</p>
     <p>❌ Larzan kapav disparet</p>
-    <button onclick="go('lesson')">Get Lasanble</button>
+    <button onclick="go('lesson')">Li bon ou konne</button>
   </div>
 
   <!-- Retry Payment -->
@@ -115,3 +115,4 @@ function go(id){
 
 </body>
 </html>
+
