--- a/z8-suspicious-link.html
+++ b/z8-suspicious-link.html
@@ -78,7 +78,7 @@
   <div class="screen" id="pinChoice">
     <h3>Ki PIN pli sekirize?</h3>
     <button class="danger" onclick="go('weakPin')">1234</button>
-    <button class="safe" onclick="go('strongPin')">584927</button>
+    <button class="safe" onclick="go('strongPin')">5847</button>
   </div>
 
   <!-- Weak PIN -->
@@ -107,7 +107,7 @@
 
   <!-- Lesson 2 -->
   <div class="screen" id="lesson2">
-    <h2>LESION FINAL</h2>
+    <h2>LESSON FINAL</h2>
     <p>🔗 Doute = Pa klik</p>
     <p>🔐 Toultan met enn PIN solid</p>
     <p>🙅‍♂️ Pa partaz PIN avek personn</p>
@@ -125,3 +125,4 @@ function go(id){
 
 </body>
 </html>
+
